[package]
name = "libferroxid-artnet"
version = "0.1.0"
authors = ["András Németh <sunarch@protonmail.com>"]
edition = "2021"
description = "An implementation of the Art-Net protocol"
documentation = "https://docs.rs/libferroxid-artnet"
readme = "README.md"
homepage = "https://github.com/sunarch/libferroxid-artnet"
repository = "https://github.com/sunarch/libferroxid-artnet"
license = "MPL-2.0"
keywords = ["libferroxid", "art-net", "artnet"]
categories = ["command-line-utilities", "network-programming"]
exclude = [".idea/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libferroxid_artnet"
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
serde = "1.0.138"
serde_derive = "1.0.138"
